--- a/test/toolpath/relative_import/image/SConstruct
+++ b/test/toolpath/relative_import/image/SConstruct
@@ -1,3 +1,4 @@
+from __future__ import print_function
 env = Environment(tools=['TestTool1', 'TestTool1.TestTool1_2'], toolpath=['tools'])
 
 # Test a relative import within the root of the tools directory
