--- a/src/engine/MANIFEST.in
+++ b/src/engine/MANIFEST.in
@@ -9,6 +9,7 @@ SCons/dblite.py
 SCons/Debug.py
 SCons/Defaults.py
 SCons/Environment.py
+SCons/EnvironmentValues.py
 SCons/Errors.py
 SCons/Executor.py
 SCons/Job.py
