--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,9 @@ before_install:
   - cd swig-rel-3.0.12 && ./autogen.sh && ./configure --prefix=/usr && make && sudo make install && cd ..
 
 script: 
-  - python runtest.py -a || if [[ $? == 2 ]]; then exit 0; else exit 1; fi
+# WORKAROUND: attempt to retry job if it fails and then continue if it passes, if it fails ten times
+# then it is a real failure not related to intermitant travis failures
+  - n=0; while [[ $n -lt 10 ]]; do python runtest.py src/engine/SCons/JobTests.py && break; n=$((n+1)); done; if [[ n == 10 ]]; then exit 1; fi
+# exclude JobTest.py becuase we already ran that
+  - echo "src/engine/SCons/JobTests.py" > exclude.test
+  - python runtest.py -a --exclude-list exclude.test || if [[ $? == 2 ]]; then exit 0; else exit 1; fi
