--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 script: 
 # WORKAROUND: attempt to retry JobTests.py if it fails and then continue if it passes, if it fails ten times
 # then it is a real failure not related to intermittent travis failures
-  - n=0; while [[ $n -lt 10 ]]; do python runtest.py src/engine/SCons/JobTests.py && break; n=$((n+1)); done; if [[ n == 10 ]]; then exit 1; fi
+  - n=0; while [[ $n -lt 10 ]]; do python runtest.py src/engine/SCons/JobTests.py && break; n=$((n+1)); done; if [ "$n" -gt "9" ]; then exit 1; fi
 # exclude JobTest.py becuase we already ran that
   - echo "src/engine/SCons/JobTests.py" > exclude.test
   - python runtest.py -a --exclude-list exclude.test || if [[ $? == 2 ]]; then exit 0; else exit 1; fi
