updated travis script to not exit, but instead just set the exit code, also setup travis to use code coverage correctly for parallel tests, and finally had to remove the .coveralls, because it is overiding the repo token for my repo, and this should not be in public repos

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - tar xzf rel-3.0.12.tar.gz
   - cd swig-rel-3.0.12 && ./autogen.sh && ./configure --prefix=/usr && make && sudo make install && cd ..
   - sudo pip install coverage
+  - sudo pip install coveralls
   - echo "import coverage" | sudo tee --append /usr/lib/python2.7/sitecustomize.py
   - echo "coverage.process_startup()" | sudo tee --append /usr/lib/python2.7/sitecustomize.py 
 
@@ -20,6 +21,9 @@ script:
   - echo "[run]" >> .coveragerc
   - echo "source = $PWD/src" >> .coveragerc
   - echo "parallel = True" >> .coveragerc
-  - coverage run --rcfile=$PWD/.coverage runtest.py -a || if [[ $? == 2 ]]; then exit 0; else exit 1; fi
+  - coverage run --rcfile=$PWD/.coveragerc runtest.py -a || if [[ $? == 2 ]]; then true; else false; fi
+
+after_success:
   - coverage combine
   - coverage report
+  - coveralls --rcfile=$PWD/.coveragerc
