--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,4 +19,4 @@ install:
 build: off
 
 test_script:
-  - python runtest.py -a || if [[ $? == 2 ]]; then exit 0; else exit 1; fi
+  - cmd: (python runtest.py -a) || if %errorlevel% == 2 then exit 0 else exit 1
