--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,8 @@ install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - pip install lxml
+  - choco install dmd
+  - choco install ldc
 
 build: off
 
