Add more dependencies for improved test coverage.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,9 +15,11 @@ install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - pip install lxml
+  - choco install clang
   - choco install dmd
   - choco install ldc
   - choco install swig
+  - choco install vswhere
 
 build: off
 
