--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,21 @@ dist: trusty
 language: python
 
 install:
-# dependencies for clang tests
-  - sudo apt-get -y install clang 
-# dependencies for gdc tests
-  - sudo apt-get -y install gdc 
-# dependencies for docbook tests
-  - sudo apt-get -y install docbook-xml xsltproc libxml2-dev libxslt-dev fop docbook-xsl-doc-pdf
-# dependencies for latex tests
-  - sudo apt-get -y install texlive-full biber texmaker 
-# need some things for building dependencies for other tests
-  - sudo apt-get -y install python-pip python-dev build-essential libpcre3-dev autoconf automake libtool bison subversion git
-# dependencies for docbook tests continued
-  - sudo pip install lxml
-# dependencies for D tests
-  - sudo wget http://master.dl.sourceforge.net/project/d-apt/files/d-apt.list -O /etc/apt/sources.list.d/d-apt.list
-  - wget -qO - https://dlang.org/d-keyring.gpg | sudo apt-key add -
-  - sudo apt-get update && sudo apt-get -y --allow-unauthenticated install dmd-bin 
-# dependencies for ldc tests
-  - wget https://github.com/ldc-developers/ldc/releases/download/v1.4.0/ldc2-1.4.0-linux-x86_64.tar.xz
-  - tar xf ldc2-1.4.0-linux-x86_64.tar.xz
-  - sudo cp -rf ldc2-1.4.0-linux-x86_64/* /
-# dependencies for swig tests
-  - wget https://github.com/swig/swig/archive/rel-3.0.12.tar.gz
-  - tar xzf rel-3.0.12.tar.gz
-  - cd swig-rel-3.0.12 && ./autogen.sh && ./configure --prefix=/usr && make && sudo make install && cd ..
+    - ./.travis/install.h
 
 # python 3 is not fulling passing at this time
 # so allow failure so the coverage stage can be reached with python 2
 matrix:
+  include:
+    - python: 2.7
+      env: PYVER=27
   allow_failures:
     - python: 3.5
+      env: PYVER=35
     - python: 3.6
+      env: PYVER=36
     - python: pypy
+      env: PYVER=pypy
 
 jobs:
   include:
