--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: trusty
 language: python
 
 install:
-    - ./.travis/install.h
+    - ./.travis/install.sh
 
 # python 3 is not fulling passing at this time
 # so allow failure so the coverage stage can be reached with python 2
