--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,8 @@ image: Visual Studio 2017
 shallow_clone: true
 
 install:
-  - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  #set python version, and cygwin tools for clang tests
+  - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - python --version
   - pip install lxml
   - pip install pypiwin32
