--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,7 @@ jobs:
   include:
     - &test_job
       stage: Test
-      script: 
-      # WORKAROUND: attempt to retry JobTests.py if it fails and then continue if it passes, if it fails ten times
-      # then it is a real failure not related to intermittent travis failures
-        - n=0; while [[ $n -lt 10 ]]; do python runtest.py src/engine/SCons/JobTests.py && break; n=$((n+1)); done; if [ "$n" -gt "9" ]; then false; fi
-        - echo "src/engine/SCons/JobTests.py" > exclude_jobtest
-        - python runtest.py -a --exclude-list exclude_jobtest || if [[ $? == 2 ]]; then true; else false; fi
+      script: python runtest.py -a || if [[ $? == 2 ]]; then true; else false; fi
       before_script: skip
       after_success: skip
       python: 2.7
@@ -71,14 +66,8 @@ jobs:
         - echo "parallel = True" >> .coveragerc
         - printf "omit =\n\t*Tests.py\n\tsrc/test_*\n\tsrc/setup.py\n\n" >> .coveragerc
         - echo "[path] = $PWD" >> .coveragerc
-      # Not including this workaround in the coverage report, because it will result
-      # in constantly changing coverage reports depending on the number of times
-      # the JobTests.py had to run to pass
-      # TODO: figure out how to cover JobTests.py
-      # - n=0; while [[ $n -lt 10 ]]; do coverage run --rcfile=$PWD/.coveragerc runtest.py src/engine/SCons/JobTests.py && break; n=$((n+1)); done; if [ "$n" -gt "9" ]; then false; fi
-      # exclude JobTest.py becuase we already ran that
-        - echo "src/engine/SCons/JobTests.py" > exclude_jobtest
-        - python runtest.py -l -a --exclude-list exclude_jobtest > all_tests
+        # get a list of all the tests to split them up
+        - python runtest.py -l -a > all_tests
         - let "start = ($(wc -l < all_tests) / ${TOTAL_BUILD_JOBS}) * (${BUILD_JOB_NUM} - 1)"; true;
         - let "end = ($(wc -l < all_tests) / ${TOTAL_BUILD_JOBS}) * ${BUILD_JOB_NUM}"
         - if (( ${BUILD_JOB_NUM} == ${TOTAL_BUILD_JOBS} )); then end=$(wc -l < all_tests); fi
