pr-3052: Updated swig tool with some default paths and fixed test to build on windows.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,10 +6,10 @@ install:
   - python --version
   - pip install lxml
   - pip install pypiwin32
-  - choco install dmd
-  - choco install ldc
-  - choco install swig
-  - choco install vswhere
+  - choco install --allow-empty-checksums dmd
+  - choco install --allow-empty-checksums ldc
+  - choco install --allow-empty-checksums swig
+  - choco install --allow-empty-checksums vswhere  
 
 environment:
   matrix:
