For now disable 64 bit tests on appveyor. We burn a lot of time running both 32 and 64 bits.  Enable python 3.7.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,32 +40,41 @@ environment:
     - PYTHON: "C:\\Python36"
       BUILD_JOB_NUM: 4
 
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python37"
       BUILD_JOB_NUM: 1
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python37"
       BUILD_JOB_NUM: 2
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python37"
       BUILD_JOB_NUM: 3
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHON: "C:\\Python37"
       BUILD_JOB_NUM: 4
 
-    - PYTHON: "C:\\Python35-x64"
-      BUILD_JOB_NUM: 1
-    - PYTHON: "C:\\Python35-x64"
-      BUILD_JOB_NUM: 2
-    - PYTHON: "C:\\Python35-x64"
-      BUILD_JOB_NUM: 3
-    - PYTHON: "C:\\Python35-x64"
-      BUILD_JOB_NUM: 4
+    # - PYTHON: "C:\\Python27-x64"
+    #   BUILD_JOB_NUM: 1
+    # - PYTHON: "C:\\Python27-x64"
+    #   BUILD_JOB_NUM: 2
+    # - PYTHON: "C:\\Python27-x64"
+    #   BUILD_JOB_NUM: 3
+    # - PYTHON: "C:\\Python27-x64"
+    #   BUILD_JOB_NUM: 4
+
+    # - PYTHON: "C:\\Python35-x64"
+    #   BUILD_JOB_NUM: 1
+    # - PYTHON: "C:\\Python35-x64"
+    #   BUILD_JOB_NUM: 2
+    # - PYTHON: "C:\\Python35-x64"
+    #   BUILD_JOB_NUM: 3
+    # - PYTHON: "C:\\Python35-x64"
+    #   BUILD_JOB_NUM: 4
       
-    - PYTHON: "C:\\Python36-x64"
-      BUILD_JOB_NUM: 1
-    - PYTHON: "C:\\Python36-x64"
-      BUILD_JOB_NUM: 2
-    - PYTHON: "C:\\Python36-x64"
-      BUILD_JOB_NUM: 3
-    - PYTHON: "C:\\Python36-x64"
-      BUILD_JOB_NUM: 4
+    # - PYTHON: "C:\\Python36-x64"
+    #   BUILD_JOB_NUM: 1
+    # - PYTHON: "C:\\Python36-x64"
+    #   BUILD_JOB_NUM: 2
+    # - PYTHON: "C:\\Python36-x64"
+    #   BUILD_JOB_NUM: 3
+    # - PYTHON: "C:\\Python36-x64"
+    #   BUILD_JOB_NUM: 4
 
 build: off
 build_script:
