--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ shallow_clone: true
 install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - python --version
-  - pip install lxml
+  - STATIC_DEPS=true & pip install lxml
   - pip install pypiwin32
   - choco install --allow-empty-checksums dmd
   - choco install --allow-empty-checksums ldc
