--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,8 +4,8 @@ shallow_clone: true
 install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - python --version
-  - STATIC_DEPS=true & pip install lxml
   - pip install pypiwin32
+  - set STATIC_DEPS=true & pip install lxml
   - choco install --allow-empty-checksums dmd
   - choco install --allow-empty-checksums ldc
   - choco install --allow-empty-checksums swig
