--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -78,4 +78,13 @@ environment:
 
 build: off
 build_script:
-  - cmd: python runtest.py test/Java
+  - cmd: python runtest.py -l -a > all_tests.txt 
+  - ps: >-
+      $TOTAL_BUILD_JOBS = 4;
+      $Lines = (Get-Content all_tests.txt | Measure-Object -line).Lines;
+      $start = ($Lines / $TOTAL_BUILD_JOBS) * ($Env:BUILD_JOB_NUM - 1);
+      $end = ($Lines / $TOTAL_BUILD_JOBS) * $Env:BUILD_JOB_NUM;
+      if ( $Env:BUILD_JOB_NUM -eq $TOTAL_BUILD_JOBS){ $end = $Lines };
+      if ( $start -eq 0 ){ $start = 1 };
+      get-content all_tests.txt | select -first ($end - $start) -skip ($start - 1) | Out-File -Encoding ASCII build_tests.txt;
+  - cmd: powershell -Command "& { python runtest.py -j 2 -f build_tests.txt; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
