--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,10 @@ jobs:
       sudo: required
 
     - <<: *test_job
-      python: 3.7-dev
+      python: 3.7
       env: PYVER=37
       sudo: required
+      dist: xenial  # required for Python 3.7 (travis-ci/travis-ci#9069)
 
     - <<: *test_job
       python: pypy
