see if defining _JAVA_OPTIONS= to nothing will quiet STDERR from java which is breaking tests for py3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,9 @@ jobs:
 
     - <<: *test_job
       python: 3.7
-      env: PYVER=37
+      env: 
+        - PYVER=37
+        - _JAVA_OPTIONS=
       sudo: required
       dist: xenial  # required for Python 3.7 (travis-ci/travis-ci#9069)
 
