Add vix installer toolset in appveyor setup
The msi packaging tests won't be run if this is not installed.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,12 +14,13 @@ install:
   - python --version
   - pip install pypiwin32
   - set STATIC_DEPS=true & pip install lxml
+
   - choco install --allow-empty-checksums dmd
   - choco install --allow-empty-checksums ldc
   - choco install --allow-empty-checksums swig
   - choco install --allow-empty-checksums vswhere
   - choco install --allow-empty-checksums xsltproc
-
+  - choco install --allow-empty-checksums wixtoolset
 
 environment:
   matrix:
