Add test for 1.8. Modularize java tests and move files to a fixture.  Change TestCommon's options_arguments to keep passed lists and not join them into a string.

--- a/test/Java/java_version_image/SConstruct
+++ b/test/Java/java_version_image/SConstruct
@@ -12,6 +12,8 @@ AddOption('--java_version',
           type='string')
 
 path=GetOption('javac_path')
+if path[0] == "'":
+    path = path[1:-1]
 
 version = GetOption('java_version')
 
