Add xsltproc and also force updated git to get rid of broken xsltproc wrongly included in git windows package

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,8 @@ install:
   - choco install --allow-empty-checksums ldc
   - choco install --allow-empty-checksums swig
   - choco install --allow-empty-checksums vswhere
-  - choco install --allow-empty-checksums xsltproc  
+  - choco install --allow-empty-checksums xsltproc
+  - choco install --allow-empty-checksums git.install
 
 
 environment:
