--- a/src/engine/MANIFEST.in
+++ b/src/engine/MANIFEST.in
@@ -30,6 +30,7 @@ SCons/Platform/mingw.py
 SCons/Platform/posix.py
 SCons/Platform/sunos.py
 SCons/Platform/win32.py
+SCons/Platform/virtualenv.py
 SCons/Scanner/__init__.py
 SCons/Scanner/C.py
 SCons/Scanner/D.py
