Add clangCommon to MANIFEST.in so it get's packaged

--- a/src/engine/MANIFEST.in
+++ b/src/engine/MANIFEST.in
@@ -65,6 +65,7 @@ SCons/Tool/c++.py
 SCons/Tool/cxx.py
 SCons/Tool/cc.py
 SCons/Tool/cyglink.py
+SCons/Tool/clangCommon/__init__.py
 SCons/Tool/clang.py
 SCons/Tool/clangxx.py
 SCons/Tool/cvf.py
