--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,7 @@ install:
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;%PATH%"
   - ps: >-
       $env:PYUSERBASEDIR = python -m site --user-base;
-      [Environment]::SetEnvironmentVariable("Path", $env:Path + ";" + $env:PYUSERBASEDIR, [EnvironmentVariableTarget]::User)
+      [Environment]::SetEnvironmentVariable("Path", $env:PYUSERBASEDIR + ";" + $env:Path, [EnvironmentVariableTarget]::Machine)
   - set
   - pip install --user -U pip setuptools wheel 
   - pip install --user -U pypiwin32 coverage coveralls
